--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -28,33 +28,33 @@
     <string name="config_datause_iface">rmnet0</string>
 
     <!-- XXXXX NOTE THE FOLLOWING RESOURCES USE THE WRONG NAMING CONVENTION.
-	Please don't copy them, copy anything else. -->
+         Please don't copy them, copy anything else. -->
 
     <!-- This string array should be overridden by the device to present a list of network
-	attributes. This is used by the connectivity manager to decide which networks can coexist
-	based on the hardware -->
+         attributes.  This is used by the connectivity manager to decide which networks can coexist
+         based on the hardware -->
     <!-- An Array of "[Connection name],[ConnectivityManager connection type],
-	[associated radio-type],[priority],[restoral-timer(ms)],[dependencyMet] -->
+         [associated radio-type],[priority],[restoral-timer(ms)],[dependencyMet]  -->
     <!-- the 5th element "resore-time" indicates the number of milliseconds to delay
-	before automatically restore the default connection. Set -1 if the connection
-	does not require auto-restore. -->
+         before automatically restore the default connection.  Set -1 if the connection
+         does not require auto-restore. -->
     <!-- the 6th element indicates boot-time dependency-met value. -->
     <string-array translatable="false" name="networkAttributes">
         <item>"wifi,1,1,1,-1,true"</item>
         <item>"mobile,0,0,0,-1,true"</item>
         <item>"mobile_mms,2,0,2,60000,true"</item>
         <item>"mobile_supl,3,0,2,60000,true"</item>
-        <item>"mobile_dun,4,0,4,60000,true"</item>
+        <item>"mobile_dun,4,0,3,60000,true"</item>
         <item>"mobile_hipri,5,0,3,60000,true"</item>
         <item>"bluetooth,7,7,1,-1,true"</item>
-        <item>"wifi_p2p,13,1,0,-1,true"</item>
+        <item>"wifi_p2p,13,1,0,-1,false"</item>
     </string-array>
 
     <!-- This string array should be overridden by the device to present a list of radio
-	attributes. This is used by the connectivity manager to decide which networks can coexist
-	based on the hardware -->
+         attributes.  This is used by the connectivity manager to decide which networks can coexist
+         based on the hardware -->
     <!-- An Array of "[ConnectivityManager connectionType],
-	[# simultaneous connection types]" -->
+                      [# simultaneous connection types]"  -->
     <string-array translatable="false" name="radioAttributes">
         <item>"1,1"</item>
         <item>"0,1"</item>
@@ -62,7 +62,7 @@
     </string-array>
 
     <string-array translatable="false" name="config_tether_wifi_regexs">
-        <item>"wl0.1"</item>
+        <item>"eth0"</item>
     </string-array>
 
     <!-- Array of allowable ConnectivityManager network types for tethering -->
